--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "@nuxtjs/auth-next": "5.0.0-1648802546.c9880dc",
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/dotenv": "^1.4.1",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
-    "webpack": "^4.46.0",
-    "@nuxtjs/dotenv": "^1.4.1"
+    "webpack": "^4.46.0"
   },
   "devDependencies": {
     "@nuxtjs/style-resources": "^1.2.1",
