--- a/package.json
+++ b/package.json
@@ -14,24 +14,27 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/dotenv": "^1.4.1",
     "core-js": "^3.19.3",
+    "date-fns": "^2.28.0",
     "nuxt": "^2.15.8",
+    "v-mask": "^2.3.0",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
-    "webpack": "^4.46.0",
-    "@nuxtjs/dotenv": "^1.4.1"
+    "webpack": "^4.46.0"
   },
   "devDependencies": {
     "@nuxtjs/style-resources": "^1.2.1",
     "@vue/test-utils": "^1.3.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^27.4.4",
+    "eslint": "^8.15.0",
     "eslint-config-prettier": "^8.3.0",
     "jest": "^27.4.4",
     "prettier": "^2.5.1",
-    "vue-jest": "^3.0.4",
     "sass": "^1.42.1",
-    "sass-loader": "^10.2.0"
+    "sass-loader": "^10.2.0",
+    "vue-jest": "^3.0.4"
   }
 }
